--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a ytbackend for learning ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -12,5 +12,8 @@
     "developement"
   ],
   "author": "Divyansh Sawant",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
